--- a/src/pages/admin/dashboard.module.less
+++ b/src/pages/admin/dashboard.module.less
@@ -5,19 +5,36 @@
     flex-direction: column;
     align-items: center;
     background-color: #efefef;
+    padding-bottom: 30px;
 }
 .list {
-    margin-top: 30px;
-    width: 750px;
     display: flex;
     flex-wrap: wrap;
     > div {
         margin-right: 10px;
         margin-bottom: 10px;
     }
+    >div:last-child {
+        margin-right: 0;
+    }
     img {
         height: 202px;
     }
+}
+
+.center {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+}
+
+.content {
+    width: 750px;
+    margin-top: 30px;
+    display: flex;
+    overflow: auto;
+    flex-grow: 1;
 }
 
 .title {
